--- a/style.css
+++ b/style.css
@@ -9,4 +9,16 @@ body {
         height: 100vh;
         margin: 0;
     }
+h1 {
+        font-size: 3em;
+        margin-bottom: 1em;
+        color: #ffdd00;
+    }
+#moonPos {
+font-size:
+background:
+padding:
+border-radius:
+text-align:
+}
 
