--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ h1 {
         color: #ffdd00;
     }
 #moonPos {
-font-size:
-background:
-padding:
-border-radius:
-text-align:
+font-size: 1.5em;
+background: rgba(255, 255, 255, 0.05);
+padding: 1em 2em;
+border-radius: 15px;
+text-align: center;
 }
 
